--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -16,7 +15,7 @@
         <div class="container__caixa">
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura flix e o Alura reading por um preço
                 único.</h1>
-            <img src="img/Combo.png" alt="O combo+ é a junção do alura flix e o alura reading ="container__imagem">
+            <alt="O combo+ é a junção do alura flix e o alura reading ="container__imagem">
             <a href="www.alura.com.br" class="container__botao">Assine por 6x de R$ 49,99*</a>
             <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura flix </a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
@@ -24,7 +23,7 @@
     </section>
 
     <section class="container secundario">
-        <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
             <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
@@ -39,7 +38,7 @@
             </p>
             <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
         </div>
-        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+        <alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
 
     <section class="container secundario">
