--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
-            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
+            <img src="img/pngwing.com.png" alt="tela aberta com filmes"
+            p> Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
                 aparelhos. Nossa seleção de livros, séries e filmes não para de crescer.</p>
         </div>
     </section>
